--- a/text.css
+++ b/text.css
@@ -1,14 +1,12 @@
+* {margin: 0;padding: 0;}
+
 html, body{
-    width: 100%;
-    height: 100%;
     background-color: green;
-    overflow: hidden;
-    display: block;
+
     background-image: url(https://64.media.tumblr.com/821e07ca0747b893f035c038d11aabb2/ae60ecf83402c716-38/s1280x1920/d8c9ab9022097f812ca92402aa3144a36e8b69ee.pnj);
 }
 
 #navbar{
-    
     margin: 0;
     padding: 1rem;
     box-sizing: border-box;
@@ -24,11 +22,17 @@ html, body{
 }
 
 #canvas{
-    margin:0;
+    display: block;
+
+    margin:1rem;
     padding: 0;
 }
-
+head{
+    display: flex;
+    flex-direction: row;
+}
 #input{
+    align-self: center;
     height: min-content;
     width: auto;
 }
