--- a/text.css
+++ b/text.css
@@ -1,11 +1,18 @@
-* {margin: 0;padding: 0;}
+* {margin: 0;padding: 0;
+    }
 
-html, body{
-    background-color: green;
+html,body{
+    height: 100%;
+   background: linear-gradient(blue, #82257d); 
+   margin: 0;
+   padding: 0;
+
+    
     display:flexbox;
     -ms-flex-item-align: center;
     
 }
+
 
 #navbar{
     margin: 0;
@@ -22,11 +29,11 @@ html, body{
 
 #canvas{
 
-
     margin:1rem;
     padding: 0;
 }
 head{
+    
     display: flex;
     flex-direction: row;
 }
