--- a/start.css
+++ b/start.css
@@ -27,7 +27,7 @@ p {
 }
 
 #navbar a{
-    padding: auto;
+    padding:  0.5em;
     margin-left: 1rem;
     box-sizing: border-box;
     border: 1px;
