--- a/text.css
+++ b/text.css
@@ -4,7 +4,8 @@
 html,body{
     font-size: 1em;
     height: 100%;
-   background-color: linear-gradient(blue, darkgreen);
+   /* background-color: linear-gradient(blue, darkgreen); */
+   background-color: lightblue;
    background-image: url(bg2.png);
    background-position: bottom;
    background-repeat: repeat-x;
