--- a/text.css
+++ b/text.css
@@ -66,7 +66,7 @@ head{
 }
 
 /* mobile devices */
-@media screen and (max-width: 60rem) {
+@media screen and (max-width: 90em) {
     * {margin: 0;padding: 0;
     }
     
