--- a/text.css
+++ b/text.css
@@ -66,7 +66,7 @@ head{
 }
 
 /* mobile devices */
-@media screen and (max-width: 90em) {
+@media (max-aspect-ratio: 3/4) {
     * {margin: 0;padding: 0;
     }
     
@@ -111,7 +111,7 @@ head{
 
 
 /* for very wide screens */
-@media screen and (min-width: 1500px) {
+@media screen and (aspect-ratio: 16/9) {
 
     html,body{
         font-size: 1em;
